Fix waybar workspaces not showing clearly

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -51,6 +51,7 @@ button:hover {
 
 #workspaces button {
   padding: 0 4px;
+  color:#aaa;
   /*    background-color: rgba(0,0,0,0.3); */
 }
 
